delete today input